--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=simple-chat-project
+spring.jackson.time-zone=UTC
+server.servlet.context-path=/api/v1
 
 security.jwt.secret-key=${SECRET_KEY}
 
